fix: z-index number detail

--- a/packages/detail/src/componets/SectionPokemon/sectionPokemon.css
+++ b/packages/detail/src/componets/SectionPokemon/sectionPokemon.css
@@ -37,7 +37,7 @@
   user-select: none;
   left: 50%;
   top: 50%;
-  z-index: 1;
+  z-index: -1;
   transform: translate(-50%, -50%);
 }
 
